[package]
name = "ln-config"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
ratatui = { version = "0.29", features = ["serde"] }
anyhow = "1"
toml = "0.8"
xdg = "2.5"
