[package]
name = "ln-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ln-config = { path = "../ln-config" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
lemmy_api_common = "0.19"
reqwest = { version = "0.12", features = ["json"] }
image = { version = "0.25", features = ["webp", "png", "gif"] }
bytes = "1.7"
url = "2"
regex = "1"
mockall = "0.12"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7"
futures = "0.3"

# TUI
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
ratatui-image = "3.0.0"
tui-input = "0.11"
intui-tabs = "0.3.0"
