[package]
name = "lemmynator"
version = "0.2.1"
edition = "2021"
description = "TUI for Lemmy"
repository = "https://github.com/intuis/lemmynator"
homepage = "https://github.com/intuis/lemmynator"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ln-config = { version = "0.2.1", path = "../ln-config" }

anyhow = "1"
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["env-filter"] }
tracing-error = "0.2.1"
serde = { version = "1", features = ["derive"] }
lemmy_api_common = "0.19"
reqwest = { version = "0.12", features = ["json"] }
image = { version = "0.25", features = ["webp", "png", "gif"] }
bytes = "1.7"
url = "2"
regex = "1"
mockall = "0.12"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7"
futures = "0.3"

# TUI
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["serde"] }
ratatui-image = "5"
ratskin = "0.2.0"
tui-input = "0.11"
intui-tabs = "0.4.0"
tui-scrollview = "0.5"
